--- a/ProjectNocturne/assets/css/general/styles.css
+++ b/ProjectNocturne/assets/css/general/styles.css
@@ -610,7 +610,7 @@ body {
 
 .color-wrapper {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+   grid-template-columns: repeat(6, minmax(0, 1fr));
     width: 100%;
     gap: 8px;
 }
