--- a/ProjectNocturne/assets/css/tools/tools.css
+++ b/ProjectNocturne/assets/css/tools/tools.css
@@ -702,18 +702,6 @@
     transition: background-color 0.2s ease;
 }
 
-/* --- ESTILOS AÑADIDOS --- */
-.search-result-item.alarm-disabled,
-.search-result-item.timer-finished {
-    opacity: 0.5;
-}
-
-.search-result-item.alarm-disabled .result-info,
-.search-result-item.timer-finished .result-info {
-    opacity: 1; /* Asegura que el texto siga siendo legible */
-}
-/* --- FIN DE ESTILOS AÑADIDOS --- */
-
 .search-result-item .result-info {
     display: flex;
     flex-direction: column;
@@ -1239,8 +1227,8 @@
     width: max-content;
     font-size: 1.2rem;
     color: #000000e6;
-    background: #f5f5fa;
-    border: 1px solid transparent;
+    background: transparent;
+    border: 1px solid #00000020;
     padding: 4px 12px;
     border-radius: 50px;
 }
