--- a/ProjectNocturne/assets/css/general/dark-mode.css
+++ b/ProjectNocturne/assets/css/general/dark-mode.css
@@ -344,6 +344,12 @@
     border-color: #fff;
 }
 
+/* ==== CORRECCIÓN APLICADA AQUÍ ==== */
+.dark-mode .color-content:not(.active):hover .color::before {
+    border-color: #ffffff20;
+}
+/* FIN DE LA CORRECCIÓN */
+
 .dark-mode .shadow {
     box-shadow: unset;
     border-bottom: 1px solid #ffffff20;
@@ -355,10 +361,6 @@
 }
 
 .dark-mode .collapse-btn:hover {
-    background-color: #ffffff20;
-}
-
-.dark-mode .color-content:hover {
     background-color: #ffffff20;
 }
 
