--- a/ProjectNocturne/assets/css/tools/tools.css
+++ b/ProjectNocturne/assets/css/tools/tools.css
@@ -26,7 +26,11 @@
     user-select: none;
     transition: background-color 0.2s ease, border-color 0.2s ease, color 0.2s ease;
 }
-
+#sound-list-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
 .menu-button:hover {
     background-color: #f5f5fa;
 }
